--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
-    "vue": "^3.0.4"
+    "vue": "^3.0.4",
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.4",
